fixed item page alignment

--- a/application/public/css/item.css
+++ b/application/public/css/item.css
@@ -64,7 +64,6 @@ body{
     font-size: 40px;
     color: #666666;
     letter-spacing: -2px;
-    padding-top: 15%;
     line-height: 60px;
 }
 
